# speedy-lpf

./: LICENSE  README.md  archive.sh
common/: common.f90  common_letkf.f90  common_lpf.f90  common_time.f90  netlib2.f
speedy/: Makedef  gtags.conf
speedy/common/: common_mpi_speedy.f90  common_obs_speedy.f90  common_speedy.f90
speedy/letkf/: 000_make_letkf.sh  001_make_obsope_MPI.sh  002_make_ensemble_mean.sh  999_make_obsope.sh  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filter.f90  interpolate.f90  letkf.f90  letkf_obs.f90  letkf_tools.f90  lnkcommon.sh  obsope_MPI.f90  obsope_MPI.f90.kondo  obsope_MPI.s01  prg_ensemble_mean_MPI.f90  ulnkcommon.sh
speedy/letkf/driving_scripts/: driver.sh  params.txt
speedy/letkf/driving_scripts/old/: raob_params.txt  reg4_params.txt  run_both_raob.sh  run_both_reg2.sh  run_both_reg4.sh
speedy/letkf/lst/: SFMT.lst  common.lst  common_letkf.lst  common_lpf.lst  common_mpi.lst  common_mpi_speedy.lst  common_mtx.lst  common_obs_speedy.lst  common_speedy.lst  common_time.lst  filter.lst  interpolate.lst  letkf.lst  letkf_obs.lst  letkf_tools.lst  netlib2.lst  obsope_MPI.lst  prg_ensemble_mean_MPI.lst
speedy/letkf/run/: 000_init_kotsuki.sh  110_ensfcst_MPI.sh  120_ensemble_mean_MPI.sh  200_da_letkf.sh  201_da_lpfgm.sh  250_da_lpf.sh
speedy/obs/: 002_make_obsmake-gfortran10.sh  002_make_obsmake-ifort.sh  002_make_obsmake.sh  003_obsmake.sh  dist_all2all.grd  obs_map.txt  obsmake.s01  obsmake_kotsuki.sh  plot_station.f90  plot_station.sh  station.sh  station_raob.tbl  station_reg1.tbl  station_reg2.tbl  station_reg3.tbl  station_reg4.tbl  (+2 more)
(+68 files in other folders)
